--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1273,12 +1273,20 @@ video {
   grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
+.grid-rows-4 {
+  grid-template-rows: repeat(4, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.place-items-center {
+  place-items: center;
 }
 
 .items-start {
@@ -1319,10 +1327,6 @@ video {
 
 .justify-items-end {
   justify-items: end;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-20 {
@@ -1561,14 +1565,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vlp2 {
+.bg-vlp3 {
   --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vls {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
+  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
 }
 
 .bg-vls2 {
@@ -1863,6 +1862,11 @@ video {
 .text-vls {
   --tw-text-opacity: 1;
   color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+}
+
+.text-vls2 {
+  --tw-text-opacity: 1;
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
 .text-vred-300 {
@@ -2382,15 +2386,18 @@ input::-webkit-inner-spin-button {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
+  transition-duration: 100ms;
 }
 
 .border-hover-ring-efect:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(43 52 64 / var(--tw-ring-opacity, 1));
 }
 
 .border-hover-ring-efect:hover:is(.dark *) {
@@ -2405,35 +2412,35 @@ input::-webkit-inner-spin-button {
   border-radius: 0.25rem;
   border-width: 1px;
   border-color: transparent;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(232 233 235 / 0.7);
   padding-left: 0.25rem;
   padding-right: 0.25rem;
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
-  --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(43 52 64 / 0.6);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
+  transition-duration: 100ms;
 }
 
 .table-edit-input-style:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
+  border-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
 .table-edit-input-style:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
+  border-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1));
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
@@ -2460,18 +2467,21 @@ input::-webkit-inner-spin-button {
 }
 
 .table-interaction-icon-blue {
+  border-radius: 9999px;
+  padding: 0.375rem;
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 300ms;
+  transition-duration: 100ms;
 }
 
 .table-interaction-icon-blue:hover {
+  background-color: rgb(232 233 235 / 0.6);
   --tw-text-opacity: 1;
-  color: rgb(75 168 95 / var(--tw-text-opacity, 1));
+  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
 }
 
 .table-interaction-icon-blue:is(.dark *) {
@@ -2485,16 +2495,19 @@ input::-webkit-inner-spin-button {
 }
 
 .table-interaction-icon-red {
+  border-radius: 9999px;
+  padding: 0.375rem;
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 300ms;
+  transition-duration: 100ms;
 }
 
 .table-interaction-icon-red:hover {
+  background-color: rgb(232 233 235 / 0.6);
   --tw-text-opacity: 1;
   color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
@@ -2592,29 +2605,40 @@ input::-webkit-inner-spin-button {
 /* MARK: Tab Buttons */
 
 .tab-button {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  font-weight: 700;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-radius: 0.375rem;
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: all;
   transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tab-button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(75 168 95 / var(--tw-text-opacity, 1));
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
+.tab-button:active {
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tab-button-active {
+  display: flex;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+}
+
+.tab-button-active:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
 }
@@ -2626,13 +2650,13 @@ input::-webkit-inner-spin-button {
   border-width: 1px;
   border-color: transparent;
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
   padding: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   transition-duration: 500ms;
 }
 
@@ -2640,7 +2664,7 @@ input::-webkit-inner-spin-button {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
 }
@@ -2720,16 +2744,15 @@ input::-webkit-inner-spin-button {
   display: flex;
   border-radius: 0.375rem;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+  border-color: transparent;
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
   padding: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(232 233 235 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -2739,40 +2762,30 @@ input::-webkit-inner-spin-button {
 
 .srch-style::-moz-placeholder {
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(232 233 235 / var(--tw-text-opacity, 1));
 }
 
 .srch-style::placeholder {
   --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+  color: rgb(232 233 235 / var(--tw-text-opacity, 1));
 }
 
 .srch-style:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+  border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
-}
-
-.srch-style:hover::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
-}
-
-.srch-style:hover::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .srch-style:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+  border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
@@ -3179,6 +3192,11 @@ input[type='radio']:checked {
   color: rgb(139 145 151 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-vls3:hover {
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
 .hover\:placeholder-vla:hover::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(83 207 110 / var(--tw-placeholder-opacity, 1));
@@ -3466,11 +3484,6 @@ input[type='radio']:checked {
 .dark\:hover\:text-sky-400:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(56 189 248 / var(--tw-text-opacity, 1));
-}
-
-.dark\:hover\:text-vda:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
 }
 
 .dark\:hover\:text-vla:hover:is(.dark *) {
