--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -709,6 +709,11 @@ video {
   margin: 0.5rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -880,10 +885,6 @@ video {
   display: grid;
 }
 
-.inline-grid {
-  display: inline-grid;
-}
-
 .contents {
   display: contents;
 }
@@ -902,14 +903,6 @@ video {
 
 .h-1\.5 {
   height: 0.375rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-12 {
-  height: 3rem;
 }
 
 .h-2\.5 {
@@ -1012,10 +1005,6 @@ video {
   width: 20%;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -1048,10 +1037,6 @@ video {
   width: 1rem;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
 .w-52 {
   width: 13rem;
 }
@@ -1064,16 +1049,20 @@ video {
   width: 18rem;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
 .w-\[10\%\] {
   width: 10%;
 }
 
+.w-\[15\%\] {
+  width: 15%;
+}
+
 .w-\[18px\] {
   width: 18px;
+}
+
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .w-\[calc\(100\%-10px\)\] {
@@ -1261,10 +1250,6 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1351,6 +1336,10 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.place-self-center {
+  place-self: center;
+}
+
 .self-end {
   align-self: flex-end;
 }
@@ -1417,10 +1406,6 @@ video {
 
 .border {
   border-width: 1px;
-}
-
-.border-2 {
-  border-width: 2px;
 }
 
 .border-b-0 {
@@ -1646,11 +1631,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1679,10 +1659,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .pl-0 {
@@ -2488,7 +2464,6 @@ input::-webkit-inner-spin-button {
 
 .table-interaction-icon-blue {
   border-radius: 9999px;
-  padding: 0.375rem;
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -2521,9 +2496,19 @@ input::-webkit-inner-spin-button {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.table-interaction-icon-blue {
+  width: 28px;
+  height: 28px;
+  padding: 0;
+  /* Reset default padding */
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .table-interaction-icon-red {
   border-radius: 9999px;
-  padding: 0.375rem;
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -2554,6 +2539,17 @@ input::-webkit-inner-spin-button {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.table-interaction-icon-red {
+  width: 28px;
+  height: 28px;
+  padding: 0;
+  /* Reset default padding */
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Buttons */
@@ -3902,24 +3898,6 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:hover\:border-y-vds:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
-  border-bottom-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
-}
-
-.dark\:hover\:border-y-vdp:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
-  border-bottom-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
-}
-
-.dark\:hover\:border-y-vdp3:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(63 63 70 / var(--tw-border-opacity, 1));
-  border-bottom-color: rgb(63 63 70 / var(--tw-border-opacity, 1));
-}
-
 .dark\:hover\:bg-neutral-500:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(115 115 115 / var(--tw-bg-opacity, 1));
@@ -3933,16 +3911,6 @@ input[type='radio']:checked {
 .dark\:hover\:bg-neutral-700:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-vds2:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-vds:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
