--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1274,6 +1274,10 @@ video {
   flex-direction: column;
 }
 
+.place-items-end {
+  place-items: end;
+}
+
 .place-items-center {
   place-items: center;
 }
@@ -1324,6 +1328,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1612,6 +1620,14 @@ video {
   padding: 1.5rem;
 }
 
+.\!p-2 {
+  padding: 0.5rem !important;
+}
+
+.\!p-6 {
+  padding: 1.5rem !important;
+}
+
 .px-1\.5 {
   padding-left: 0.375rem;
   padding-right: 0.375rem;
@@ -1657,6 +1673,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.\!py-1 {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
+}
+
 .pl-1\.5 {
   padding-left: 0.375rem;
 }
@@ -1683,6 +1704,10 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.\!pl-12 {
+  padding-left: 3rem !important;
 }
 
 .text-left {
@@ -1746,6 +1771,16 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.\!text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+}
+
+.\!text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
 .font-bold {
@@ -1868,6 +1903,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-vls3 {
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
 }
 
 .underline {
