--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1086,6 +1086,22 @@ video {
   width: 100%;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
+.w-\[75\%\] {
+  width: 75%;
+}
+
+.w-\[5\%\] {
+  width: 5%;
+}
+
+.w-\[65\%\] {
+  width: 65%;
+}
+
 .max-w-72 {
   max-width: 18rem;
 }
@@ -1274,10 +1290,6 @@ video {
   flex-direction: column;
 }
 
-.place-items-end {
-  place-items: end;
-}
-
 .place-items-center {
   place-items: center;
 }
@@ -1322,6 +1334,10 @@ video {
   justify-items: end;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-20 {
   gap: 5rem;
 }
@@ -1330,8 +1346,8 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1511,6 +1527,11 @@ video {
   border-top-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.border-t-vls {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
+}
+
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
@@ -1592,6 +1613,10 @@ video {
   padding: 0.375rem !important;
 }
 
+.\!p-6 {
+  padding: 1.5rem !important;
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1620,12 +1645,13 @@ video {
   padding: 1.5rem;
 }
 
-.\!p-2 {
-  padding: 0.5rem !important;
+.\!p-4 {
+  padding: 1rem !important;
 }
 
-.\!p-6 {
-  padding: 1.5rem !important;
+.\!py-1 {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
 }
 
 .px-1\.5 {
@@ -1648,11 +1674,6 @@ video {
   padding-right: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1673,9 +1694,18 @@ video {
   padding-bottom: 1rem;
 }
 
-.\!py-1 {
-  padding-top: 0.25rem !important;
-  padding-bottom: 0.25rem !important;
+.\!py-0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.\!py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
+.\!pl-12 {
+  padding-left: 3rem !important;
 }
 
 .pl-1\.5 {
@@ -1706,10 +1736,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.\!pl-12 {
-  padding-left: 3rem !important;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1737,6 +1763,11 @@ video {
 .\!text-sm {
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
+}
+
+.\!text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
 .text-2xl {
@@ -1771,16 +1802,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.\!text-lg {
-  font-size: 1.125rem !important;
-  line-height: 1.75rem !important;
-}
-
-.\!text-xl {
-  font-size: 1.25rem !important;
-  line-height: 1.75rem !important;
 }
 
 .font-bold {
@@ -1895,6 +1916,11 @@ video {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
+.text-vls3 {
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
 .text-vred-300 {
   --tw-text-opacity: 1;
   color: rgb(254 160 154 / var(--tw-text-opacity, 1));
@@ -1905,9 +1931,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-vls3 {
-  --tw-text-opacity: 1;
-  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+.text-vls2\/80 {
+  color: rgb(43 52 64 / 0.8);
 }
 
 .underline {
@@ -3599,11 +3624,6 @@ input[type='radio']:checked {
   color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-red-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
-}
-
 .hover\:text-sky-500:hover {
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity, 1));
@@ -3781,11 +3801,6 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:border-zinc-900:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
-}
-
 .dark\:border-t-vred-300:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -3794,6 +3809,21 @@ input[type='radio']:checked {
 .dark\:border-t-zinc-900:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-t-vds3light:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(163 163 163 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-t-vds:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-t-vds2:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
 }
 
 .dark\:\!bg-zinc-900:is(.dark *) {
