--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1057,12 +1057,16 @@ video {
   width: 18px;
 }
 
-.w-\[55\%\] {
-  width: 55%;
+.w-\[5\%\] {
+  width: 5%;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[65\%\] {
+  width: 65%;
+}
+
+.w-\[75\%\] {
+  width: 75%;
 }
 
 .w-\[calc\(100\%-10px\)\] {
@@ -1084,22 +1088,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-\[5\%\] {
-  width: 5%;
-}
-
-.w-\[65\%\] {
-  width: 65%;
 }
 
 .max-w-72 {
@@ -1346,10 +1334,6 @@ video {
   gap: 2rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1527,11 +1511,6 @@ video {
   border-top-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.border-t-vls {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
-}
-
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
@@ -1597,6 +1576,31 @@ video {
   background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
 }
 
+.bg-vls {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vls2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vla {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vla2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 168 95 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vla3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 100 48 / var(--tw-bg-opacity, 1));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1645,13 +1649,9 @@ video {
   padding: 1.5rem;
 }
 
-.\!p-4 {
-  padding: 1rem !important;
-}
-
-.\!py-1 {
-  padding-top: 0.25rem !important;
-  padding-bottom: 0.25rem !important;
+.\!py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
 }
 
 .px-1\.5 {
@@ -1692,16 +1692,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.\!py-0 {
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-}
-
-.\!py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
 }
 
 .\!pl-12 {
@@ -1916,6 +1906,10 @@ video {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
+.text-vls2\/80 {
+  color: rgb(43 52 64 / 0.8);
+}
+
 .text-vls3 {
   --tw-text-opacity: 1;
   color: rgb(36 44 54 / var(--tw-text-opacity, 1));
@@ -1929,10 +1923,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-vls2\/80 {
-  color: rgb(43 52 64 / 0.8);
 }
 
 .underline {
@@ -3610,6 +3600,11 @@ input[type='radio']:checked {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-vla3:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 100 48 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:fill-vls:hover {
   fill: #8B9197;
 }
@@ -3801,6 +3796,11 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-t-vds2:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
+}
+
 .dark\:border-t-vred-300:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -3809,21 +3809,6 @@ input[type='radio']:checked {
 .dark\:border-t-zinc-900:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-t-vds3light:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(163 163 163 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-t-vds:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-t-vds2:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
 }
 
 .dark\:\!bg-zinc-900:is(.dark *) {
