--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1549,6 +1549,10 @@ video {
   padding: 1.5rem;
 }
 
+.\!p-2 {
+  padding: 0.5rem !important;
+}
+
 .\!py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -3263,31 +3267,31 @@ input[type='radio']:checked {
 
 @keyframes glowEffect {
   0% {
-    box-shadow: 0 0 3px 3px rgb(83, 207, 110, 0) inset;
+    box-shadow: 0 0 2px 2px rgb(83, 207, 110, 0) inset;
     /* Start with no glow */
     border-radius: 0.375rem;
   }
 
   20% {
-    box-shadow: 0 0 3px 3px rgb(83, 207, 110) inset;
+    box-shadow: 0 0 2px 2px rgb(83, 207, 110) inset;
     /* Glow peaks here */
     border-radius: 0.375rem;
   }
 
   50% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0.763) inset;
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.763) inset;
     /* Intense glow */
     border-radius: 0.375rem;
   }
 
   80% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0.514) inset;
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.514) inset;
     /* Start to fade */
     border-radius: 0.375rem;
   }
 
   100% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0) et;
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0) et;
     /* End with no glow */
     border-radius: 0.375rem;
   }
@@ -3295,31 +3299,31 @@ input[type='radio']:checked {
 
 @keyframes glowEffectDark {
   0% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0) inset;
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0) inset;
     /* Start with no glow */
     border-radius: 0.375rem;
   }
 
   20% {
-    box-shadow: 0 0 3px 3px rgb(254, 127, 118) inset;
+    box-shadow: 0 0 2px 2px rgb(254, 127, 118) inset;
     /* Glow peaks here */
     border-radius: 0.375rem;
   }
 
   50% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0.763) inset;
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.763) inset;
     /* Intense glow */
     border-radius: 0.375rem;
   }
 
   80% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0.514) inset;
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.514) inset;
     /* Start to fade */
     border-radius: 0.375rem;
   }
 
   100% {
-    box-shadow: 0 0 5px 5px rgba(254, 127, 118, 0) et;
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0) et;
     /* End with no glow */
     border-radius: 0.375rem;
   }
@@ -3328,11 +3332,11 @@ input[type='radio']:checked {
 /* Apply the animation for the glow effect */
 
 .add-item-glow {
-  animation: glowEffect 500ms ease-out;
+  animation: glowEffect 300ms ease-in-out;
 }
 
 .add-item-glow-dark {
-  animation: glowEffectDark 500ms ease-out;
+  animation: glowEffectDark 300ms ease-in-out;
 }
 
 .terminator {
