--- a/public/css/style.css
+++ b/public/css/style.css
@@ -401,54 +401,54 @@ input[type='radio']:checked {
 /* MARK: Animations */
 @keyframes glowEffect {
   0% {
-    box-shadow: 0 0 3px 3px rgb(83, 207, 110, 0) inset; /* Start with no glow */
+    box-shadow: 0 0 2px 2px rgb(83, 207, 110, 0) inset; /* Start with no glow */
     border-radius: 0.375rem;
   }
   20% {
-    box-shadow: 0 0 3px 3px rgb(83, 207, 110) inset; /* Glow peaks here */
+    box-shadow: 0 0 2px 2px rgb(83, 207, 110) inset; /* Glow peaks here */
     border-radius: 0.375rem;
   }
   50% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0.763) inset; /* Intense glow */
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.763) inset; /* Intense glow */
     border-radius: 0.375rem;
   }
   80% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0.514) inset; /* Start to fade */
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.514) inset; /* Start to fade */
     border-radius: 0.375rem;
   }
   100% {
-    box-shadow: 0 0 3px 3px rgba(83, 207, 110, 0) et; /* End with no glow */
+    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0) et; /* End with no glow */
     border-radius: 0.375rem;
   }
 }
 @keyframes glowEffectDark {
   0% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0) inset; /* Start with no glow */
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0) inset; /* Start with no glow */
     border-radius: 0.375rem;
   }
   20% {
-    box-shadow: 0 0 3px 3px rgb(254, 127, 118) inset; /* Glow peaks here */
+    box-shadow: 0 0 2px 2px rgb(254, 127, 118) inset; /* Glow peaks here */
     border-radius: 0.375rem;
   }
   50% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0.763) inset; /* Intense glow */
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.763) inset; /* Intense glow */
     border-radius: 0.375rem;
   }
   80% {
-    box-shadow: 0 0 3px 3px rgba(254, 127, 118, 0.514) inset; /* Start to fade */
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.514) inset; /* Start to fade */
     border-radius: 0.375rem;
   }
   100% {
-    box-shadow: 0 0 5px 5px rgba(254, 127, 118, 0) et; /* End with no glow */
+    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0) et; /* End with no glow */
     border-radius: 0.375rem;
   }
 }
 /* Apply the animation for the glow effect */
 .add-item-glow {
-  animation: glowEffect 500ms ease-out;
+  animation: glowEffect 300ms ease-in-out;
 }
 .add-item-glow-dark {
-  animation: glowEffectDark 500ms ease-out;
+  animation: glowEffectDark 300ms ease-in-out;
 }
 .terminator {
   padding: 0 !important;
