--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1736,11 +1736,6 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
@@ -1972,7 +1967,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-ExtraLight.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-ExtraLight.ttf') format('truetype');
 
   font-weight: 200;
 
@@ -1984,7 +1979,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-Light.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Light.ttf') format('truetype');
 
   font-weight: 300;
 
@@ -1996,7 +1991,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-Regular.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Regular.ttf') format('truetype');
 
   font-weight: 400;
 
@@ -2008,7 +2003,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-Bold.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Bold.ttf') format('truetype');
 
   font-weight: 700;
 
@@ -2020,7 +2015,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-Italic.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Italic.ttf') format('truetype');
 
   font-weight: 400;
 
@@ -2032,7 +2027,7 @@ video {
 @font-face {
   font-family: 'Manrope';
 
-  src: url('../fonts/manrope/Manrope-BoldItalic.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-BoldItalic.ttf') format('truetype');
 
   font-weight: 700;
 
