--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,42 +5,42 @@
 /* Extra Light weight */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-ExtraLight.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: light;
 }
 /* Light weight */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-Light.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: light;
 }
 /* Regular weight */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-Regular.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 /* Bold weight */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-Bold.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 /* Italic weight */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-Italic.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 /* Bold Italic */
 @font-face {
   font-family: 'Manrope';
-  src: url('../fonts/manrope/Manrope-BoldItalic.ttf') format('truetype');
+  src: url('./fonts/manrope/Manrope-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
