--- a/src/components/items/itemEditor.html
+++ b/src/components/items/itemEditor.html
@@ -1,13 +1,13 @@
-<div x-data class="relative z-50 w-auto h-auto">
-  <button @click="slideOverOpen=true" class="tab-button flex justify-center items-center">
-    <div x-show="sideBar" class="flex items-center p-2">
-      <object data-feather="scissors" class="mr-1.5 w-4"></object>
-      <span x-show="sideBar">Items</span>
-    </div>
-    <div x-show="!sideBar" class="p-2">
-      <object data-feather="scissors" type=""></object>
-    </div>
-  </button>
+<button @click="slideOverOpen=true" class="tab-button flex justify-center items-center">
+  <div x-show="sideBar" class="flex items-center p-2">
+    <object data-feather="scissors" class="mr-1.5 w-4"></object>
+    <span x-show="sideBar">Items</span>
+  </div>
+  <div x-show="!sideBar" class="p-2">
+    <object data-feather="scissors" type=""></object>
+  </div>
+</button>
+<div class="relative z-50 w-auto h-auto">
   <template x-if="$store.globStore.getCurrentTab()" x-teleport="body">
     <div x-show="slideOverOpen" @keydown.window.escape="slideOverOpen=false" class="relative z-[99]">
       <div
@@ -33,7 +33,7 @@
                 <div class="px-4 sm:px-5">
                   <div class="flex items-start justify-between pb-1">
                     <h2 class="text-base font-semibold leading-6 text-gray-900" id="slide-over-title">
-                      Slide Over Title
+                      Add edit or remove items
                     </h2>
                     <div class="flex items-center h-auto ml-3">
                       <button
